fixes #13067 - dropdown menu alignment fix

--- a/app/assets/stylesheets/topbar.scss
+++ b/app/assets/stylesheets/topbar.scss
@@ -124,7 +124,7 @@
 }
 
 .nav-header {
-  padding: 3px 20px;
+  padding: 3px 10px;
   font-size: 11px;
   font-weight: bold;
   line-height: 20px;
